--- a/themes/custom/mytheme/templates/node--1.html.twig
+++ b/themes/custom/mytheme/templates/node--1.html.twig
@@ -7,7 +7,7 @@
 	<section
 	class="w-[100%] h-[80vh] relative !mb-4 overflow-hidden"> <!-- Background autoplay video -->
 	<video id="hero-video" class="absolute inset-0 w-full h-full object-cover z-0 opacity-0 transition-opacity duration-1000" muted playsinline poster="{{ theme_path }}/assets/static/Header_Video_Cover.jpg">
-		<source src="{{ theme_path }}/assets/static/Header_Video.mp4" type="video/mp4"/>
+		<source src="{{ theme_path }}/assets/static/header_video_new.mp4" type="video/mp4"/>
 		Your browser does not support the video tag.
 	</video>
 
@@ -38,8 +38,8 @@
 																					          immense career opportunities.
 		</p>
 		<a
-			data-aos="fade-up" href="#" class="group text-[#285F99] !mt-3 !px-5 !py-1.5 border border-[#9D8055] font-thin
-								         transition-colors duration-500 rounded text-lg
+			data-aos="fade-up" href="#" class="group text-[#285F99] !mt-3 !px-5 !py-1.5 border border-[#9D8055] font-light
+								         transition-colors duration-500 rounded text-[17px]
 								          w-fit flex items-center gap-2 focus-visible:outline-none
 								          focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#9D8055]" aria-label="Read more about Faisal Holding">
 
@@ -103,17 +103,17 @@
 		<img src="{{ theme_path }}/assets/static/chairman.jpg" alt="Chairman" class="h-56 sm:h-70 lg:h-100 xl:h-120 w-auto max-w-full object-cover rounded-lg"/>
 	</div>
 
-	<div data-aos="fade-up" class="flex flex-col gap-3 sm:gap-4 max-w-full sm:max-w-lg xl:max-w-sm relative z-[10] !px-2 sm:!px-0 items-center xl:items-start">
+	<div data-aos="fade-up" class="flex flex-col gap-3 sm:gap-4 max-w-full sm:max-w-lg xl:max-w-lg relative z-[10] !px-2 sm:!px-0 items-center xl:items-start">
 		<p class="leading-7 sm:leading-9 lg:leading-12 text-lg sm:text-2xl lg:text-3xl text-[#518DCC] font-thin text-center xl:text-left">
 			"Today we pride ourselves on being a trustworthy household name both
 																					          in Qatar & beyond."
 		</p>
-		<p class="text-base sm:text-lg lg:text-xl font-medium text-[#555555] text-center xl:text-left">
+		<p class="text-base sm:text-[18px] font-light text-[#555555] text-center xl:text-left">
 			Sheikh Faisal Bin Qassim Al Thani - Chairman
 		</p>
 		<a
-			data-aos="fade-up" href="#" class="group text-[#285F99] !mt-4 !px-5 !py-1.5 sm:w-[200px] border border-[#9D8055] font-thin
-								           transition-colors duration-500 rounded text-lg
+			data-aos="fade-up" href="#" class="group text-[#285F99] !mt-4 !px-5 !py-1.5 sm:w-[200px] border border-[#9D8055] font-light
+								           transition-colors duration-500 rounded text-[17px]
 								          w-fit flex items-center gap-2 focus-visible:outline-none
 								          focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#9D8055]" aria-label="Read more about Faisal Holding">
 
@@ -126,8 +126,8 @@
 	</div>
 </section>
 
-<section class="!px-4 sm:!px-8 lg:!px-12 flex flex-col lg:flex-row items-center justify-around gap-8 lg:gap-16 !mb-10 ">
-	<div class="w-full lg:w-auto">
+<section class="!px-4 sm:!px-8 lg:!px-12 !py-6 flex flex-col lg:flex-row items-center justify-around gap-8 lg:gap-16 !mb-10 ">
+	<div class="w-full">
 		<div class="flex flex-col gap-3 sm:gap-4 !p-2 sm:!p-4">
 			<h2 data-aos="fade-up" class="text-2xl sm:text-3xl lg:text-4xl font-thin text-[#285F99]">
 				Global Footprint
@@ -167,7 +167,7 @@
 		</div>
 	</div>
 
-	<div data-aos="zoom-in" class="w-full lg:w-auto h-[500px] flex justify-center">
+	<div data-aos="zoom-in" class="w-full h-[500px] flex justify-center">
 	<script async src="{{ theme_path }}/assets/static/globe/hologram-globe.loader.js?v19"></script>
 		</div>
 </section>
@@ -218,8 +218,8 @@
 																				          creating immense career opportunities.
 				</p>
 				<a
-					data-aos="fade-up" href="#" class="group text-[#285F99] !mt-4 !px-5 !py-1.5 sm:w-[200px] border border-[#9D8055] font-thin
-										           transition-colors duration-500 rounded text-lg
+					data-aos="fade-up" href="#" class="group text-[#285F99] !mt-4 !px-5 !py-1.5 sm:w-[200px] border border-[#9D8055] font-light
+										           transition-colors duration-500 rounded text-[17px]
 										          w-fit flex items-center gap-2 focus-visible:outline-none
 										          focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#9D8055]" aria-label="Read more about Faisal Holding">
 
@@ -251,8 +251,8 @@
 																				          lasting value for our stakeholders and communities.
 				</p>
 				<a
-					data-aos="fade-up" href="#" class="group text-[#285F99] !mt-4 !px-5 !py-1.5 sm:w-[200px] border border-[#9D8055] font-thin
-										           transition-colors duration-500 rounded text-lg
+					data-aos="fade-up" href="#" class="group text-[#285F99] !mt-4 !px-5 !py-1.5 sm:w-[200px] border border-[#9D8055] font-light
+										           transition-colors duration-500 rounded text-[17px]
 										          w-fit flex items-center gap-2 focus-visible:outline-none
 										          focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#9D8055]" aria-label="Read more about Faisal Holding">
 
@@ -283,8 +283,8 @@
 																				          between continents and creating opportunities worldwide.
 				</p>
 				<a
-					data-aos="fade-up" href="#" class="group text-[#285F99] !mt-4 !px-5 !py-1.5 sm:w-[200px] border border-[#9D8055] font-thin
-										           transition-colors duration-500 rounded text-lg
+					data-aos="fade-up" href="#" class="group text-[#285F99] !mt-4 !px-5 !py-1.5 sm:w-[200px] border border-[#9D8055] font-light
+										           transition-colors duration-500 rounded text-[17px]
 										          w-fit flex items-center gap-2 focus-visible:outline-none
 										          focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[#9D8055]" aria-label="Read more about Faisal Holding">
 
