--- a/themes/custom/mytheme/templates/partials/footer.html.twig
+++ b/themes/custom/mytheme/templates/partials/footer.html.twig
@@ -16,12 +16,11 @@
 				<img src="{{ theme_path }}/assets/static/Footer_logo.svg" alt="Al Faisal Holding" class="h-20 lg:h-28"/>
 			</div>
 
-			
 
 			<div class="flex flex-col gap-3">
-				<a href="#" class="hover:text-[#AF957F] font-medium mb-2">BUSINESSES</a>
+				<a href="#" class="hover:text-[#AF957F] font-extra-light mb-2">BUSINESSES</a>
 				<!-- Business Categories under BUSINESSES -->
-				<div class="flex flex-col gap-2 text-xs lg:text-sm text-[#8B9DB5] tracking-normal font-light uppercase">
+				<div class="flex flex-col gap-2 text-xs lg:text-[12px] text-[#8B9DB5] tracking-[1px] font-thin leading-loose uppercase">
 					<a href="#" class="hover:text-[#AF957F]">Real Estate</a>
 					<a href="#" class="hover:text-[#AF957F]">Hospitality</a>
 					<a href="#" class="hover:text-[#AF957F]">Construction & Project Management</a>
@@ -34,9 +33,9 @@
 				</div>
 			</div>
 
-      <div class="flex flex-col gap-3">
-				<a href="#" class="hover:text-[#AF957F] font-medium">IMPORTANT LINKS</a>
-        	<div class="flex flex-col gap-2 text-xs lg:text-sm text-[#8B9DB5] tracking-normal font-light uppercase">
+			<div class="flex flex-col gap-3">
+				<a href="#" class="hover:text-[#AF957F] font-extra-light">IMPORTANT LINKS</a>
+				<div class="flex flex-col gap-2 text-xs lg:text-[12px] text-[#8B9DB5] tracking-[1px] font-thin leading-loose uppercase">
 					<a href="#" class="hover:text-[#AF957F]">About</a>
 					<a href="#" class="hover:text-[#AF957F]">Media</a>
 					<a href="#" class="hover:text-[#AF957F]">PHILANTHROPY</a>
@@ -45,14 +44,14 @@
 			</div>
 
 			<!-- Main Navigation with Business Categories -->
-		
+
 		</div>
 	</div>
 
 	<!-- Bottom bar with copyright and social links -->
-	<div class="relative bg-black/30 border-t border-white/10 !mt-10 z-10">
-		<img src="{{ theme_path }}/assets/static/Footer_Aseet.svg" alt="" class="hidden xl:!block absolute right-8 bottom-13 h-20 sm:h-28 md:h-32 lg:h-36 xl:h-40 bg-transparent z-1 pointer-events-none"/>
-		<div class="w-full mx-auto !px-6 sm:!px-8 lg:!px-12 !py-4 lg:!py-5">
+	<div class="relative bg-black/30 border-t border-white/10 !mt-10 z-10 ">
+
+		<div class="w-full mx-auto !px-6 sm:!px-8 lg:!px-12 !py-4 lg:!py-5 z-2 relative">
 			<div
 				class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-4 lg:gap-8 text-xs text-[#DFD3C7]/70">
 				<!-- Left side - Copyright and links -->
@@ -83,25 +82,26 @@
 				</div>
 			</div>
 		</div>
+		<img src="{{ theme_path }}/assets/static/Footer_Aseet.svg" alt="" class="hidden xl:!block absolute right-8 bottom-12 h-20 sm:h-28 md:h-32 lg:h-36 xl:h-40 bg-transparent z-[-1] pointer-events-none"/>
 	</div>
 
 	<!-- Warning text -->
 	<div class="bg-[#031F46] !px-6 sm:!px-8 lg:!px-12 !py-4 lg:!py-5">
-		<p class="text-[#756750] text-xs leading-relaxed max-w-10xl mx-auto text-center">
+		<p class="text-[#756750] text-[8px] leading-relaxed max-w-10xl mx-auto text-center">
 			Warning: It has come to the attention of Al Faisal Holding that
-			          unauthorized persons are contacting members of the public or business
-			          community by various means including telecommunications, emails and
-			          through social and professional networking sites claiming to be
-			          representing Al Faisal Holding or its shareholders or associated
-			          entities. These unauthorized persons may be attempting to commit
-			          fraudulent acts and deceive the public and no dealings should take
-			          place with any such persons and any business or other relationship
-			          with Al Faisal Holding will only be conducted through official
-			          channels by persons authorised under constitutional documentation of
-			          the Company. Al Faisal Holding will never attempt to solicit business
-			          on a cold-call basis in such a manner. Al Faisal Holding will not be
-			          liable for any fraudulent activities carried out in the aforementioned
-			          manner.
+									          unauthorized persons are contacting members of the public or business
+									          community by various means including telecommunications, emails and
+									          through social and professional networking sites claiming to be
+									          representing Al Faisal Holding or its shareholders or associated
+									          entities. These unauthorized persons may be attempting to commit
+									          fraudulent acts and deceive the public and no dealings should take
+									          place with any such persons and any business or other relationship
+									          with Al Faisal Holding will only be conducted through official
+									          channels by persons authorised under constitutional documentation of
+									          the Company. Al Faisal Holding will never attempt to solicit business
+									          on a cold-call basis in such a manner. Al Faisal Holding will not be
+									          liable for any fraudulent activities carried out in the aforementioned
+									          manner.
 			<strong class="text-[#8B7355]">Fraudulent acts disclaimer</strong>
 		</p>
 	</div>
