--- a/themes/custom/mytheme/templates/partials/header.html.twig
+++ b/themes/custom/mytheme/templates/partials/header.html.twig
@@ -3,10 +3,10 @@
 <header class="sticky top-0 z-50 bg-[#f7f0e9]/90 backdrop-blur">
 	<nav class="flex items-center justify-between !px-4 sm:!px-8 lg:!px-12">
 		<div>
-			<img src="{{ theme_path }}/assets/static/Header_Logo.svg" alt="head_logo" class="h-20 sm:h-20">
+			<img src="{{ theme_path }}/assets/static/Header_Logo.svg" alt="head_logo" class="h-24 sm:h-24">
 		</div>
 
-		<div class="hidden md:!flex items-center text-[17px] font-normal gap-4 text-[#424557]">
+		<div class="hidden md:!flex items-center text-[17px] font-extra-light tracking-[0.5px]  gap-4 text-[#424557]">
 			<a href="#" class="hover:text-[#B2886D]">About</a>
 			<a href="#" class="hover:text-[#B2886D]">Businesses</a>
 			<a href="#" class="hover:text-[#B2886D]">Media</a>
@@ -38,7 +38,7 @@
 				</button>
 			</div>
 
-			<div class="flex flex-col gap-6 !px-6 !py-4 text-[17px] font-normal text-[#424557] overflow-y-auto flex-1">
+			<div class="flex flex-col gap-6 !px-6 !py-4 text-[17px] font-extra-light text-[#424557] tracking-[0.5px] overflow-y-auto flex-1">
 				<a href="#" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">About</a>
 				<a href="#" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">Businesses</a>
 				<a href="#" class="hover:text-[#B2886D] border-b border-gray-200 pb-3">Media</a>
