--- a/themes/custom/mytheme/templates/partials/footer.html.twig
+++ b/themes/custom/mytheme/templates/partials/footer.html.twig
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 		</div>
-		<img src="{{ theme_path }}/assets/static/Footer_Aseet.svg" alt="" class="hidden xl:!block absolute right-8 bottom-12 h-20 sm:h-28 md:h-32 lg:h-36 xl:h-40 bg-transparent z-[-1] pointer-events-none"/>
+		<img src="{{ theme_path }}/assets/static/Footer_Aseet.svg" alt="" class="hidden xl:!block absolute right-8 bottom-[50px] h-20 sm:h-28 md:h-32 lg:h-36 xl:h-40 bg-transparent z-[-1] pointer-events-none"/>
 	</div>
 
 	<!-- Warning text -->
