--- a/themes/custom/mytheme/templates/node--1.html.twig
+++ b/themes/custom/mytheme/templates/node--1.html.twig
@@ -168,7 +168,7 @@
 	</div>
 
 	<div data-aos="zoom-in" class="w-full h-[500px] flex justify-center">
-	<script async src="{{ theme_path }}/assets/static/globe/hologram-globe.loader.js?v19"></script>
+	<script async src="{{ theme_path }}/assets/static/globe/hologram-globe.loader.js"></script>
 		</div>
 </section>
 <!-- Horizontal Accordion Section -->
