--- a/themes/custom/mytheme/templates/partials/header.html.twig
+++ b/themes/custom/mytheme/templates/partials/header.html.twig
@@ -3,14 +3,14 @@
 <header class="sticky top-0 z-50 bg-[#f7f0e9]/90 backdrop-blur">
 	<nav class="flex items-center justify-between !px-4 sm:!px-8 lg:!px-12">
 		<div>
-			<img src="{{ theme_path }}/assets/static/Header_Logo_new.svg" alt="head_logo" class="h-20 sm:h-20">
+			<a href="/"><img src="{{ theme_path }}/assets/static/Header_Logo_new.svg" alt="head_logo" class="h-20 sm:h-20"></a>
 		</div>
 
 		<div class="hidden md:!flex items-center text-[17px] font-extra-light tracking-[0.5px]  gap-4 text-[#424557]">
 			<a href="#" class="hover:text-[#B2886D]">About</a>
 			<a href="#" class="hover:text-[#B2886D]">Businesses</a>
 			<a href="#" class="hover:text-[#B2886D]">Media</a>
-			<a href="#" class="hover:text-[#B2886D]">Philanthropy</a>
+			<a href="/philanthrophy" class="hover:text-[#B2886D]">Philanthropy</a>
 			<a href="/timeline" class="hover:text-[#B2886D]">Timeline</a>
 			<a href="#" class="hover:text-[#B2886D]">Contact</a>
 			<img src="{{ theme_path }}/assets/static/Search_Icon.svg" alt="search" class="h-5 transition-transform duration-200 ease-out hover:scale-110 focus:scale-110">
