real estate page done

--- a/themes/custom/mytheme/templates/partials/header.html.twig
+++ b/themes/custom/mytheme/templates/partials/header.html.twig
@@ -10,7 +10,7 @@
 			<a href="#" class="hover:text-[#B2886D]">About</a>
 			<a href="#" class="hover:text-[#B2886D]">Businesses</a>
 			<a href="#" class="hover:text-[#B2886D]">Media</a>
-			<a href="/philanthrophy" class="hover:text-[#B2886D]">Philanthropy</a>
+			<a href="/philanthropy" class="hover:text-[#B2886D]">Philanthropy</a>
 			<a href="/timeline" class="hover:text-[#B2886D]">Timeline</a>
 			<a href="#" class="hover:text-[#B2886D]">Contact</a>
 			<img src="{{ theme_path }}/assets/static/Search_Icon.svg" alt="search" class="h-5 transition-transform duration-200 ease-out hover:scale-110 focus:scale-110">
